updating stylesheet with a few layout changes

--- a/app/views/channels/show.html.erb
+++ b/app/views/channels/show.html.erb
@@ -1,8 +1,9 @@
 <% content_for :head do %>
     <%= javascript_include_tag "channel" %>
 <% end %>
-<div id="sidebar">
-	<h2><%=h @channel.name %></h2>
+<div id="sub_header">
+	<h2 class="channel_title"><%=h @channel.name %></h2>
+	<a href="javascript:showOverlay();" class="invite_people">+ Invite People</a>
 	<nav id="channel_nav">
 		<ul>
 		<li><%= link_to content_tag(:span, '')+'Edit Group', edit_channel_path(@channel), :class => 'edit_group' %><span></span></li>
@@ -11,16 +12,10 @@
 		<li><a href="javascript:void(0)" title="<% @channel.users.each do |u| %> <%= u.alias %> <% end %>" class="members"><span></span> Members</a></li>
 		</ul>
 	</nav>
-	<a href="javascript:showOverlay();" class="invite_people">+ Invite People</a>
-	<ul class="bad_controls">
-		<li><%= link_to 'Delete Channel', channel_path(@channel), :confirm => "Are you sure?", :method => :delete, :class => 'delete_channel' %></li>
-		<% if @channel.users.include? @user %>
-		<li><%= link_to "Leave Channel", "/channels/leave_channel/#{@channel.id}", :class => 'leave_channel' %></li>
-		<% end %>
-	</ul>
-
-        Branches: 
-        <ul>
+</div>
+<div id="sidebar">
+        <h3>Branches:</h3>
+        <ul class="branch_list">
             <% @channel.branch_ids.each do |bid| %>  
                 <li>
                 <% if bid %>
@@ -30,6 +25,13 @@
                 <% end %>
                 </li>
             <% end %>
+        </ul>
+        <h3>Other controls</h3>
+        <ul class="bad_controls">
+        	<li><%= link_to 'Delete Channel', channel_path(@channel), :confirm => "Are you sure?", :method => :delete, :class => 'delete_channel' %></li>
+        	<% if @channel.users.include? @user %>
+        	<li><%= link_to "Leave Channel", "/channels/leave_channel/#{@channel.id}", :class => 'leave_channel' %></li>
+        	<% end %>
         </ul>
 </div>
 <!-- /end left #sidebar -->
@@ -63,10 +65,10 @@
 	    <% @message_groups.each do |group| %>
                 <li class="message_row">
                 <div class="meta">
-                    <p class="username"><%= group.poster %>:</p>
-                    <p class="date"><%= group.date %></p>
+                    <a href="javascript:void(0)" class="user_pic" title="<%= group.poster %>"><img src="/images/user-default.jpg" width="24" height="24" alt="<%= group.poster %>" /></a>
                 </div>
                 <div class="message_content">
+                	<p class="username"><%= group.poster %>:</p>
                     <% group.messages.each do |m| %>
                         <%= render :partial => "message", :object => m %>
                     <% end %>
