More style updates

--- a/app/views/channels/_message.erb
+++ b/app/views/channels/_message.erb
@@ -1,30 +1,27 @@
 
 <p id="message_<%= message.id %>" 
-<% if message.poster != @user.alias and (@previously_last_checked.nil? or @previously_last_checked < message.updated_at) %>
-style="border-left:1px solid #347acb;"
-<% end %>
->
-    <span class="buttons">
-        <% if message.poster == @user.alias %>
-            <%= link_to content_tag(:span, ''), [@channel, message], :confirm => "Are you sure?",
-                :method => :delete, :remote => true, :class => 'delete_post' %>
-        <% end %>
-        <% if not message.has_branch? %>
-            <%= link_to content_tag(:span, ''), "/channels/#{@channel.id}?branch_id=#{message.id}", :class => 'make_branch' %>
-        <% end %>
-    </span>
-    <%= raw [message.marked_up_content] %>
-</p>
-
+<% if message.poster != @user.alias and (@previously_last_checked.nil? or @previously_last_checked < message.updated_at) %>class="unread"<% end %>>
 <% if message.has_branch? %>
     <% branch_message = message.successor_for_branch message.branch_link %>
     <% if branch_message %>
-        <div class="branchpoint">
+        <span class="branchpoint">
             <% if message.branch_link %>
-                <%= link_to "#{branch_message.summarize}", "/channels/#{@channel.id}?branch_id=#{message.branch_link}" %>
+                <%= link_to content_tag(:span, '')+"#{branch_message.summarize}", "/channels/#{@channel.id}?branch_id=#{message.branch_link}", :class => 'branch_link', :title => 'Click to view this branch.' %>
             <% else %>
-                <%= link_to "#{branch_message.summarize}", "/channels/#{@channel.id}" %>
+                <%= link_to content_tag(:span, '')+"#{branch_message.summarize}", "/channels/#{@channel.id}", :class => 'branch_link', :title => 'Click to view this branch.' %>
             <% end %>
-        </div>
+        </span>
     <% end %>
 <% end %>
+<span class="buttons">
+    <% if message.poster == @user.alias %>
+        <%= link_to content_tag(:span, ''), [@channel, message], :confirm => "Are you sure?",
+            :method => :delete, :remote => true, :class => 'delete_post', :title => 'Delete this message.' %>
+    <% end %>
+    <% if not message.has_branch? %>
+        <%= link_to content_tag(:span, ''), "/channels/#{@channel.id}?branch_id=#{message.id}", :class => 'make_branch', :title => 'Start a branch from this message.' %>
+    <% end %>
+</span>
+<%= raw [message.marked_up_content] %>
+
+</p>
