--- a/app/views/channels/show.html.erb
+++ b/app/views/channels/show.html.erb
@@ -3,15 +3,17 @@
 <% end %>
 <div id="sub_header">
 	<h2 class="channel_title"><%=h @channel.name %></h2>
-	<a href="javascript:showOverlay();" class="invite_people">+ Invite People</a>
-	<nav id="channel_nav">
-		<ul>
-		<li><%= link_to content_tag(:span, '')+'Edit Group', edit_channel_path(@channel), :class => 'edit_group' %><span></span></li>
-		<li><a href="javascript:void(0)" class="visual_map"><span></span> Visual Map</a></li>
-		<li><a href="javascript:void(0)" class="notification_settings"><span></span> Notification Settings</a></li>
-		<li><a href="javascript:void(0)" title="<% @channel.users.each do |u| %> <%= u.alias %> <% end %>" class="members"><span></span> Members</a></li>
-		</ul>
-	</nav>
+	<div class="sub_header_right">
+		<a href="javascript:showOverlay();" class="invite_people">+ Invite People</a>
+		<nav id="channel_nav">
+			<ul>
+			<li><%= link_to content_tag(:span, '')+'Edit Group', edit_channel_path(@channel), :class => 'edit_group' %><span></span></li>
+			<li><a href="javascript:void(0)" class="visual_map"><span></span> Visual Map</a></li>
+			<li><a href="javascript:void(0)" class="notification_settings"><span></span> Notification Settings</a></li>
+			<li><a href="javascript:void(0)" title="<% @channel.users.each do |u| %> <%= u.alias %> <% end %>" class="members"><span></span> Members</a></li>
+			</ul>
+		</nav>
+	</div>
 </div>
 <div id="sidebar">
         <h3>Branches:</h3>
@@ -19,9 +21,9 @@
             <% @channel.branch_ids.each do |bid| %>  
                 <li>
                 <% if bid %>
-                    <%= link_to @channel.latest_for_branch(bid).summarize(30), "/channels/#{@channel.id}?branch_id=#{bid}" %>
+                    <%= link_to @channel.latest_for_branch(bid).summarize(22), "/channels/#{@channel.id}?branch_id=#{bid}" %>
                 <% else %>
-                    <%= link_to @channel.latest_for_branch(bid).summarize(30), @channel %>
+                    <%= link_to @channel.latest_for_branch(bid).summarize(22), @channel %>
                 <% end %>
                 </li>
             <% end %>
@@ -43,9 +45,12 @@
         <img id="spinner" style="float:right;visibility:hidden;" src="/images/spinner.gif"/>
 	
         <%= form_for [@channel, @message] , :remote => true do |f| %>
-            <%= f.hidden_field(:branch_id, :value => params[:branch_id]) %>
-	    <%= f.text_area :content, :size => "100x4", :id => "msginput" %>
-            <a href="javascript:spinOn();$('#new_message').submit();" class="message_post">Post</a>
+			<%= f.hidden_field(:branch_id, :value => params[:branch_id]) %>
+			<div class="input_wrapper">
+				<label for="msginput">Enter your message here...</label>
+				<%= f.text_field :content, :id => "msginput" %>
+			</div>
+           <p class="form_note">To post your message hit the return/enter key. Simple HTML characters are allowed.</p>
 	<% end %>
 	</div>
 	
@@ -103,6 +108,7 @@
 		messageScrollBottom();
 		$('#msginput').focus();
 		waitForMsg(<%= @channel.id %>);
+		inputFocusState();
 	});
 
     weHaveFocus = true;
