more small tweaks

--- a/app/views/channels/show.html.erb
+++ b/app/views/channels/show.html.erb
@@ -124,10 +124,8 @@ function playDing()
 
 function fadeUnread()
 {
-    var marked_unread = $('.message_content p').filter(function() {
-                return $(this).css('borderLeftColor') != '#eee';
-                });
-    marked_unread.animate({ borderLeftColor: '#eee'}, 12000);
+    var marked_unread = $('.message_content p').filter('.unread');
+    marked_unread.animate({ background: '#fff'}, 10000);
 }
 
 window.onfocus = function()
