--- a/public/stylesheets/global.css
+++ b/public/stylesheets/global.css
@@ -341,10 +341,10 @@ input.text-input:focus, textarea:focus {
 	padding: 8px;
 	border-bottom: 1px solid #c8b498;
 	background-color: #cccccc;
-background-image: -moz-linear-gradient(top, #ffffff 0%,#fcfcfc 3%, #fbfbfb 50%, #f4f4f4 50%, #f0f0f0 100%);
+background-image: -moz-linear-gradient(top, #ffffff 0%,#faf7f4 3%, #f8f5f0 100%);
     background-image: -webkit-gradient(linear,left top,left bottom,color-stop(0, #ffffff),color-stop(0.03, #faf7f4), color-stop(1, #f8f5f0));
-    filter:  progid:DXImageTransform.Microsoft.gradient(startColorStr='#fcfcfc', EndColorStr='#f8f5f0');
-    -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorStr='#fcfcfc', EndColorStr='#f8f5f0')";
+    filter:  progid:DXImageTransform.Microsoft.gradient(startColorStr='#faf7f4', EndColorStr='#f8f5f0');
+    -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorStr='#faf7f4', EndColorStr='#f8f5f0')";
 }
 #sub_header :after {content: ".";display: block; height: 0;clear: both;visibility: hidden;}
 
@@ -404,7 +404,7 @@ background-image: -moz-linear-gradient(top, #ffffff 0%,#fcfcfc 3%, #fbfbfb 50%, 
 	float: right;
 	padding: 4px 12px 7px 12px;
 	font-size: 11px;
-	line-height: 10px;
+	line-height: 11px;
 	height: 10px;
 	text-shadow: #ffe8b8 0px 1px;
 	display: block;
