--- a/public/stylesheets/global.css
+++ b/public/stylesheets/global.css
@@ -34,6 +34,10 @@ input.text-input:focus, textarea:focus {
 	color: #333;
 }
 
+input, input:focus {
+	outline: none;
+	-moz-outline:none;
+}
 
 #header {
 	padding: 0;
